[package]
name = "physical-chain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Window","Document","HtmlVideoElement","HtmlCanvasElement","MediaStream",
  "Navigator","MediaDevices","Request","Response","console","CanvasRenderingContext2d",
  "Permissions","Geolocation","Performance","Storage","DomRect",
  "MediaStreamConstraints","MediaStreamTrack","ImageData"
] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"

base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

# IndexedDB via gloo
gloo = { version = "0.11", features = ["storage"] }
